--- a/templates/default.html
+++ b/templates/default.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - $title$</title>
+        <title>$title$ - Caden Haustein</title>
         <link rel="stylesheet" href="/css/default.css" />
+        $if(author)$<meta name="author" content="$author$">$endif$
     </head>
     <body>
         <header>
             <div class="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a href="/">Caden Haustein</a>
             </div>
             <nav>
                 <a href="/">Home</a>
