--- a/templates/default.html
+++ b/templates/default.html
@@ -15,9 +15,9 @@
             </div>
             <nav>
                 <a href="/">Home</a>
-                <a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>
-                <a href="/archive.html">Archive</a>
+                <a href="/about/index.html">About</a>
+                <a href="/contact/index.html">Contact</a>
+                <a href="/books/index.html">Library</a>
             </nav>
         </header>
 
