Add years to listing; add estimated reading time to each chapter; fix print.css

--- a/templates/crowbook.html
+++ b/templates/crowbook.html
@@ -15,9 +15,7 @@
   <script src="highlight.js"></script>
   <script> hljs.initHighlightingOnLoad() </script>
   {{/highlight_code}}
-  <script>
-    {{{script}}}
-  </script>
+  <script> {{{script}}} </script>
 </head>
 
 <body>
@@ -41,6 +39,7 @@
     </div>
     {{{footer}}}
   </div>
+  <script> readingTime(); </script>
 </body>
 
 </html>
