Add categories to better make sense of the large amount of books

--- a/templates/hakyll.html
+++ b/templates/hakyll.html
@@ -28,8 +28,11 @@
         <h1>$title$</h1>
         $body$
         $if(doBooks)$
+        $for(categories)$
+        <strong>$category$</strong>
         $for(books)$
         <p><a href="/books/$tag$"><em>$title$</em> by $author$ ($year$)</a></p>
+        $endfor$
         $endfor$
         $endif$
     </main>
