Improve word count algorithm, home page format

--- a/templates/hakyll.html
+++ b/templates/hakyll.html
@@ -31,7 +31,7 @@
         $for(categories)$
         <strong>$category$</strong>
         $for(books)$
-        <p><a href="/books/$tag$"><em>$title$</em> by $author$ in $year$ ($words$ words)</a></p>
+        <p>$year$: <a href="/books/$tag$"><em>$title$</em> by $author$ ($words$ words)</a></p>
         $endfor$
         $endfor$
         $endif$
